--- a/index.html
+++ b/index.html
@@ -1,7 +1,144 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>Joao Neto is hosted with GitHub Pages.</p>
-</body>
+<!doctype html>
+<html lang="pt">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+  <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+
+  
+  <style>
+
+body {
+  font-family: "Ubuntu", Helvetica, Arial, sans-serif; font-size: 14px;
+  line-height: 1.6; color: #000000; background-color:	#000;}
+h2{
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.jumbotron {
+  background-image: url("https://unsplash.com/photos/VBWV-gfB0ks");
+  height: 100vh;
+  width:100vw;
+  margin:auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  margin-bottom: 0;
+
+}
+
+
+
+.bg-success{
+  background-color: rgba(128,218,86, 0.7)!important;
+}
+
+
+#goal {
+ color:black;
+ font-size: 3.8em;
+ background: rgba(255,169,17, 0.5);
+ width:35vw;
+
+}
+#goal1 {
+  color:black;
+ font-size: 2.5vw;
+ background: rgba(255,169,17, 0.5);
+ width:35vw;
+}
+
+.intro{
+  font-size: 1.5em;
+  color:#f2efe6;
+}
+
+.footer { background: #80da56; padding: 8px 0; margin: auto; width:100vw; border-radius: 5px; justify-content: space-between;}
+.footer a {color: #70726F;font-size: 20px;padding: 10px;border-right: 1px solid #70726F;transition: all .5s ease;}
+.footer a:first-child { border-left: 1px solid #70726F;}
+.footer a:hover { color: white;}
+  </style>
+
+<title>Joao8</title>
+</head>
+
+<body id ="body">
+    <button id="lighterr" type="button" class="btn btn-light btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Lacute;</button>
+    <button id="darkerr" type="button" class="btn btn-dark btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Dcaron;</button>
+
+    <nav id ="navyy"class="navbar navbar-expand-md navbar-dark navbar-custom">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+   <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" href="https://joao8.github.io/">Joao Neto</a>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+
+        <li class="nav-item">
+          <a href="#"target="_blank">Portfolio_00</a>
+        </li>
+      </li>
+
+      </ul>
+    </div>
+    </nav>
+    <div class="jumbotron">
+          <h1  id ="goal" class="display-5 intro"> Portfólio</h1>
+          <p id ="goal1"class="lead intro">Joao Neto</p>
+          <hr class="my-4">
+          <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
+          <div id = "john" class="card-body">
+            <p class="card-text ">Análise e desenvolvimento de sistemas</p>
+          </div>
+        </div>
+      </div>
+
+
+
+        <footer class="footer fixed-bottom">
+          <div class="container text-center">
+            <a href="https://wa.me/5541992673154"><i class="fa fa-whatsapp"></i></a>
+            <a href="https://wa.me/5541992673154"><i class="fa fa-graduation-cap"></i></a>
+            <a href="https://wa.me/5541992673154"><i class="fa fa-hand-spock-o"></i></a>
+            <a href="https://wa.me/5541992673154"><i class="fa fa-spinner fa-pulse fa-1x"></i></a>
+          
+            </div>
+        </footer>
+
+        <script>
+    const getSubmitButton = document.getElementById("lighterr");
+    getSubmitButton.onclick = toggle;
+
+    function toggle() {
+      document.getElementById("body").style.backgroundColor = "#f2efe6";
+      document.getElementById("navyy").style.backgroundColor = "#f2efe6";
+      document.getElementById("goal").style.backgroundColor = "#f2efe6";
+      document.getElementById("goal1").style.backgroundColor = "#f2efe6";
+      document.getElementById("john").style.backgroundColor = "orange";
+      return true;
+    }
+
+    const getSubmitButt = document.getElementById("darkerr");
+    getSubmitButt.onclick = toggle1;
+
+    function toggle1() {
+      document.getElementById("body").style.backgroundColor = "#000";
+      document.getElementById("navyy").style.backgroundColor = "#000";
+      document.getElementById("goal").style.backgroundColor = "rgba(255,169,17, 0.5)";
+      document.getElementById("goal1").style.backgroundColor = "rgba(255,169,17, 0.5)";
+      document.getElementById("john").style.backgroundColor = "rgba(128,218,86, 0.7)";
+      return true;
+    }
+</script>   
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
