--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ h2{
 }
 
 .jumbotron {
-  background-image: url("https://unsplash.com/photos/VBWV-gfB0ks");
+  background-image: url("pedro-lastra-Nyvq2juw4_o-unsplash.jpg");
   height: 100vh;
   width:100vw;
   margin:auto;
