--- a/index.html
+++ b/index.html
@@ -55,10 +55,21 @@ h2{
  width:35vw;
 }
 
+#navyy{
+  color:burlywood;
+  font-size: 1.2vw;
+}
+
+#navyy:hover{
+  color:#80da56;
+}
+
 .intro{
   font-size: 1.5em;
   color:#f2efe6;
 }
+
+
 
 .footer { background: #80da56; padding: 8px 0; margin: auto; width:100vw; border-radius: 5px; justify-content: space-between;}
 .footer a {color: #70726F;font-size: 20px;padding: 10px;border-right: 1px solid #70726F;transition: all .5s ease;}
@@ -73,19 +84,25 @@ h2{
     <button id="lighterr" type="button" class="btn btn-light btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Lacute;</button>
     <button id="darkerr" type="button" class="btn btn-dark btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Dcaron;</button>
 
-    <nav id ="navyy"class="navbar navbar-expand-md navbar-dark navbar-custom">
+    <nav class="navbar navbar-expand-md navbar-dark ">
       <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="https://joao8.github.io/">Joao Neto</a>
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-
-        <li class="nav-item">
-          <a href="#"target="_blank">Portfolio_00</a>
+      <a class="navbar-brand" href="https://joao8.github.io/"></a>
+      <ul class="nav justify-content-center">
+        <li   class="nav-item">
+          <a  id ="navyy" class="nav-link active " href="#">0</a>
         </li>
-      </li>
-
+        <li class="nav-item">
+          <a id ="navyy" class="nav-link" href="#">1</a>
+        </li>
+        <li class="nav-item">
+          <a  id ="navyy" class="nav-link" href="#">10</a>
+        </li>
+        <li class="nav-item">
+          <a  id ="navyy" class="nav-link" href="#">11</a>
+        </li>
       </ul>
     </div>
     </nav>
