--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 body {
   font-family: "Ubuntu", Helvetica, Arial, sans-serif; font-size: 14px;
-  line-height: 1.6; color: #000000; background-color:	#000;}
+  line-height: 1.6; color: #343c3c; background-color:	#343c3c;}
 h2{
   font-family: 'Ubuntu', sans-serif;
 }
@@ -33,8 +33,6 @@ h2{
   margin-bottom: 0;
 
 }
-
-
 
 .bg-success{
   background-color: rgba(128,218,86, 0.7)!important;
@@ -58,6 +56,7 @@ h2{
 #navyy{
   color:burlywood;
   font-size: 1.2vw;
+  background-color:#343c3c ;
 }
 
 #navyy:hover{
@@ -68,7 +67,6 @@ h2{
   font-size: 1.5em;
   color:#f2efe6;
 }
-
 
 
 .footer { background: #80da56; padding: 8px 0; margin: auto; width:100vw; border-radius: 5px; justify-content: space-between;}
@@ -84,27 +82,27 @@ h2{
     <button id="lighterr" type="button" class="btn btn-light btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Lacute;</button>
     <button id="darkerr" type="button" class="btn btn-dark btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Dcaron;</button>
 
-    <nav class="navbar navbar-expand-md navbar-dark ">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-   <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="https://joao8.github.io/"></a>
-      <ul class="nav justify-content-center">
-        <li   class="nav-item">
-          <a  id ="navyy" class="nav-link active " href="#">0</a>
-        </li>
-        <li class="nav-item">
-          <a id ="navyy" class="nav-link" href="#">1</a>
-        </li>
-        <li class="nav-item">
-          <a  id ="navyy" class="nav-link" href="#">10</a>
-        </li>
-        <li class="nav-item">
-          <a  id ="navyy" class="nav-link" href="#">11</a>
-        </li>
-      </ul>
-    </div>
+    <nav id ="navyy" class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a id = "navyy" class="nav-link" href="#">0 <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a id = "navyy" class="nav-link" href="#">1</a>
+          </li>
+          <li class="nav-item">
+            <a id = "navyy" class="nav-link" href="#">10</a>
+          </li>
+          <li class="nav-item">
+            <a id = "navyy" class="nav-link" href="#">11</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <div class="jumbotron">
           <h1  id ="goal" class="display-5 intro"> Portfólio</h1>
@@ -146,14 +144,14 @@ h2{
     getSubmitButt.onclick = toggle1;
 
     function toggle1() {
-      document.getElementById("body").style.backgroundColor = "#000";
-      document.getElementById("navyy").style.backgroundColor = "#000";
+      document.getElementById("body").style.backgroundColor = "#343c3c";
+      document.getElementById("navyy").style.backgroundColor = "#343c3c";
       document.getElementById("goal").style.backgroundColor = "rgba(255,169,17, 0.5)";
       document.getElementById("goal1").style.backgroundColor = "rgba(255,169,17, 0.5)";
       document.getElementById("john").style.backgroundColor = "rgba(128,218,86, 0.7)";
       return true;
     }
-</script>   
+</script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
