--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@ h2{
 
 #goal {
  color:black;
- font-size: 3.8em;
+ font-size: 2.5em;
  background: rgba(255,169,17, 0.5);
- width:35vw;
+ width:32vw;
 
 }
 #goal1 {
   color:black;
  font-size: 2.5vw;
  background: rgba(255,169,17, 0.5);
- width:35vw;
+ width:32vw;
 }
 
 #navyy{
   color:burlywood;
-  font-size: 1.2vw;
+  font-size: 1.2em;
   background-color:#343c3c ;
 }
 
@@ -64,7 +64,7 @@ h2{
 }
 
 .intro{
-  font-size: 1.5em;
+  font-size: 2.5em;
   color:#f2efe6;
 }
 
@@ -105,8 +105,8 @@ h2{
       </div>
     </nav>
     <div class="jumbotron">
-          <h1  id ="goal" class="display-5 intro"> Portfólio</h1>
-          <p id ="goal1"class="lead intro">Joao Neto</p>
+          <h1  id ="goal" class="display-5 intro text-center "> Portfólio</h1>
+          <p id ="goal1"class="lead intro text-center">Joao Neto</p>
           <hr class="my-4">
           <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
           <div id = "john" class="card-body">
@@ -132,8 +132,6 @@ h2{
     getSubmitButton.onclick = toggle;
 
     function toggle() {
-      document.getElementById("body").style.backgroundColor = "#f2efe6";
-      document.getElementById("navyy").style.backgroundColor = "#f2efe6";
       document.getElementById("goal").style.backgroundColor = "#f2efe6";
       document.getElementById("goal1").style.backgroundColor = "#f2efe6";
       document.getElementById("john").style.backgroundColor = "orange";
@@ -144,8 +142,6 @@ h2{
     getSubmitButt.onclick = toggle1;
 
     function toggle1() {
-      document.getElementById("body").style.backgroundColor = "#343c3c";
-      document.getElementById("navyy").style.backgroundColor = "#343c3c";
       document.getElementById("goal").style.backgroundColor = "rgba(255,169,17, 0.5)";
       document.getElementById("goal1").style.backgroundColor = "rgba(255,169,17, 0.5)";
       document.getElementById("john").style.backgroundColor = "rgba(128,218,86, 0.7)";
