--- a/index.html
+++ b/index.html
@@ -41,16 +41,18 @@ h2{
 
 #goal {
  color:black;
- font-size: 2.5em;
+ font-size: 1.5em;
  background: rgba(255,169,17, 0.5);
- width:32vw;
+ width:25vw;
+ text-align: center;
 
 }
 #goal1 {
   color:black;
- font-size: 2.5vw;
+ font-size: 1.5em;
  background: rgba(255,169,17, 0.5);
- width:32vw;
+ width:25vw;
+ text-align: center;
 }
 
 #navyy{
