--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@ h2{
             <a id = "navyy" class="nav-link" href="#">0 <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a id = "navyy" class="nav-link" href="joao8.github.io-joao00">1</a>
+            <a id = "navyy" class="nav-link" href="quest.html">1</a>
           </li>
           <li class="nav-item">
-            <a id = "navyy" class="nav-link" href="#">10</a>
+            <a id = "navyy" class="nav-link" href="quest.html">10</a>
           </li>
           <li class="nav-item">
             <a id = "navyy" class="nav-link" href="#">11</a>
