--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ h2{
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a id = "navyy" class="nav-link" href="#">0 <span class="sr-only">(current)</span></a>
+            <a id = "navyy" class="nav-link" href="cross.html">0 <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a id = "navyy" class="nav-link" href="quest.html">1</a>
