sub3/responsive width

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ h2{
  color:black;
  font-size: 1.5em;
  background: rgba(255,169,17, 0.5);
- width:25vw;
+ width:28vw;
  text-align: center;
 
 }
@@ -51,7 +51,7 @@ h2{
   color:black;
  font-size: 1.5em;
  background: rgba(255,169,17, 0.5);
- width:25vw;
+ width:28vw;
  text-align: center;
 }
 
@@ -95,7 +95,7 @@ h2{
             <a id = "navyy" class="nav-link" href="cross.html">0 <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a id = "navyy" class="nav-link" href="quest.html">1</a>
+            <a id = "navyy" class="nav-link" href="surfitness.com.br">1</a>
           </li>
           <li class="nav-item">
             <a id = "navyy" class="nav-link" href="quest.html">10</a>
