--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ h2{
             <a id = "navyy" class="nav-link" href="cross.html">0 <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a id = "navyy" class="nav-link" href="surfitness.com.br">1</a>
+            <a id = "navyy" class="nav-link" target=”_blank” href="www.surfitness.com.br">1</a>
           </li>
           <li class="nav-item">
             <a id = "navyy" class="nav-link" href="quest.html">10</a>
