--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@ h2{
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a id = "navyy" class="nav-link" href="cross.html">0 <span class="sr-only">(current)</span></a>
+            <a id = "navyy" class="nav-link" target=”_blank” href="cross.html">0 <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a id = "navyy" class="nav-link" href="surfitness.com.br">1</a>
+            <a id = "navyy" class="nav-link" target=”_blank”  href="https://surfitness.com.br">1</a>
           </li>
           <li class="nav-item">
-            <a id = "navyy" class="nav-link" href="quest.html">10</a>
+            <a id = "navyy" class="nav-link" target=”_blank” href="quest.html">10</a>
           </li>
           <li class="nav-item">
-            <a id = "navyy" class="nav-link" href="#">11</a>
+            <a id = "navyy" class="nav-link" target=”_blank” href="#">11</a>
           </li>
         </ul>
       </div>
