--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ h2{
             <a id = "navyy" class="nav-link" target=”_blank” href="quest.html">10</a>
           </li>
           <li class="nav-item">
-            <a id = "navyy" class="nav-link" target=”_blank” href="#">11</a>
+            <a id = "navyy" class="nav-link" target=”_blank” href="brain_info.html">11</a>
           </li>
         </ul>
       </div>
