--- a/brain_info.html
+++ b/brain_info.html
@@ -23,7 +23,7 @@
 
     <body>
         
-        <h1> BRAIN INFO</h1>
+        <h1> Your Brain explained</h1>
         <!-- image html -->
         <input type="image" src="brain/brain1.png" class="brain1" onclick="toggle(this);"/>
 
