--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h2{
 #goal {
  color:black;
  font-size: 1.5em;
- background: rgba(255,169,17, 0.5);
+ background: rgba(20, 20, 19, 0.918);
  width:28vw;
  text-align: center;
 
@@ -50,7 +50,7 @@ h2{
 #goal1 {
   color:black;
  font-size: 1.5em;
- background: rgba(255,169,17, 0.5);
+ background: rgba(20, 20, 19, 0.918);
  width:28vw;
  text-align: center;
 }
@@ -107,12 +107,12 @@ h2{
       </div>
     </nav>
     <div class="jumbotron">
-          <h1  id ="goal" class="display-5 intro text-center "> Portfólio</h1>
-          <p id ="goal1"class="lead intro text-center">Joao Neto</p>
+          <h1  id ="goal" class="display-5 intro text-center "> Joao Neto</h1>
+          <p id ="goal1"class="lead intro text-center">Portfolio</p>
           <hr class="my-4">
           <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
           <div id = "john" class="card-body">
-            <p class="card-text ">Análise e desenvolvimento de sistemas</p>
+            
           </div>
         </div>
       </div>
