--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ h2{
 }
 
 
-.footer { background: #80da56; padding: 8px 0; margin: auto; width:100vw; border-radius: 5px; justify-content: space-between;}
+.footer { background:rgba(243, 246, 251,0.3); padding: 8px 0; margin: auto; width:100vw; border-radius: 5px; justify-content: space-between;}
 .footer a {color: #70726F;font-size: 20px;padding: 10px;border-right: 1px solid #70726F;transition: all .5s ease;}
 .footer a:first-child { border-left: 1px solid #70726F;}
 .footer a:hover { color: white;}
