green block out

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@ h2{
 #navyy{
   color:burlywood;
   font-size: 1.2em;
-  background-color:#343c3c ;
+  background-color:rgba(243, 246, 251,0.3);
 }
 
 #navyy:hover{
-  color:#80da56;
+  color:#F3F6FB;
 }
 
 .intro{
@@ -112,7 +112,6 @@ h2{
           <h1  id ="goal" class="display-5 intro text-center "> Joao Neto</h1>
           <p id ="goal1"class="lead intro text-center">Portfolio</p>
           <hr class="my-4">
-          <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
           <div id = "john" class="card-body">
             
           </div>
