--- a/index.html
+++ b/index.html
@@ -36,25 +36,13 @@ h2{
 
 }
 
-.bg-success{
-  background-color: rgba(128,218,86, 0.7)!important;
-}
-
-
 #goal {
  color:black;
  font-size: 1.5em;
- background: rgba(20, 20, 19, 0.918);
+ background: rgba(243, 246, 251,0.3);
  width:28vw;
  text-align: center;
 
-}
-#goal1 {
-  color:black;
- font-size: 1.5em;
- background: rgba(20, 20, 19, 0.918);
- width:28vw;
- text-align: center;
 }
 
 #navyy{
@@ -108,15 +96,12 @@ h2{
         </ul>
       </div>
     </nav>
-    <div class="jumbotron">
-          <h1  id ="goal" class="display-5 intro text-center "> Joao Neto</h1>
-          <p id ="goal1"class="lead intro text-center">Portfolio</p>
-          <hr class="my-4">
-          <div id = "john" class="card-body">
-            
-          </div>
-        </div>
+    <div class="jumbotron jumbotron-fluid" id="goal">
+      <div class="container">
+        <h1 class="display-4">Fluid jumbotron</h1>
+        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
       </div>
+    </div>
 
 
 
