--- a/index.html
+++ b/index.html
@@ -96,12 +96,11 @@ h2{
         </ul>
       </div>
     </nav>
-    <div class="jumbotron jumbotron-fluid" id="goal">
-      <div class="container">
-        <h1 class="display-4">Fluid jumbotron</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-      </div>
+    <div class="jumbotron">
+        <h1  id ="goal" class="display-5 intro text-center "> Joao Neto <br> Portfolio</h1>
+         
     </div>
+    
 
 
 
