aestetic changes navbar and footer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ h2{
 }
 
 #goal {
- color:black;
+ color:#F3F6FB;
  font-size: 1.5em;
  background: rgba(243, 246, 251,0.3);
  width:28vw;
@@ -62,8 +62,8 @@ h2{
 
 
 .footer { background:rgba(243, 246, 251,0.3); padding: 8px 0; margin: auto; width:100vw; border-radius: 5px; justify-content: space-between;}
-.footer a {color: #70726F;font-size: 20px;padding: 10px;border-right: 1px solid #70726F;transition: all .5s ease;}
-.footer a:first-child { border-left: 1px solid #70726F;}
+.footer a {color: #67B7C6;font-size: 20px;padding: 10px;border-right: 1px solid #70726F;transition: all .5s ease;}
+.footer a:first-child { border-left: 1px solid #67B7C6;}
 .footer a:hover { color: white;}
   </style>
 
@@ -74,7 +74,7 @@ h2{
     <button id="lighterr" type="button" class="btn btn-light btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Lacute;</button>
     <button id="darkerr" type="button" class="btn btn-dark btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Dcaron;</button>
 
-    <nav id ="navyy" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav id ="navyy" class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
