--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ h2{
     <button id="lighterr" type="button" class="btn btn-light btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Lacute;</button>
     <button id="darkerr" type="button" class="btn btn-dark btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Dcaron;</button>
 
-    <nav id ="navyy" class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav id ="navyy" class="navbar navbar-expand-lg navbar-nav background-color">
       <a class="navbar-brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
