navbar fixed top

--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
 
 body {
   font-family: "Ubuntu", Helvetica, Arial, sans-serif; font-size: 14px;
-  line-height: 1.6; color: #343c3c; background-color:	#343c3c;}
-h2{
-  font-family: 'Ubuntu', sans-serif;
-}
+  line-height: 1.6; color: #343c3c; background-color:rgba(243, 246, 251,0.3)}
 
 .jumbotron {
   background-image: url("pedro-lastra-Nyvq2juw4_o-unsplash.jpg");
@@ -74,7 +71,7 @@ h2{
     <button id="lighterr" type="button" class="btn btn-light btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Lacute;</button>
     <button id="darkerr" type="button" class="btn btn-dark btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Dcaron;</button>
 
-    <nav id ="navyy" class="navbar navbar-expand-lg navbar-nav background-color">
+    <nav id ="navyy" class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
