--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ body {
 }
 
 #navyy{
-  color:burlywood;
+  color:#264653;
   font-size: 1.2em;
-  background-color:rgba(243, 246, 251,0.3);
+  background-color:rgba(255,255,255,0);
 }
 
 #navyy:hover{
@@ -59,8 +59,8 @@ body {
 
 
 .footer { background:rgba(243, 246, 251,0.3); padding: 8px 0; margin: auto; width:100vw; border-radius: 5px; justify-content: space-between;}
-.footer a {color: #67B7C6;font-size: 20px;padding: 10px;border-right: 1px solid #70726F;transition: all .5s ease;}
-.footer a:first-child { border-left: 1px solid #67B7C6;}
+.footer a {color:#264653;font-size: 20px;padding: 10px;border-right: 1px solid #70726F;transition: all .5s ease;}
+.footer a:first-child { border-left: 1px solid #264653;}
 .footer a:hover { color: white;}
   </style>
 
