letter change body

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <style>
 
 body {
-  font-family: "Ubuntu", Helvetica, Arial, sans-serif; font-size: 14px;
+  font-family:'Bangers', cursive;; font-size: 14px;
   line-height: 1.6; color: #343c3c; background-color:rgba(243, 246, 251,0.3)}
 
 .jumbotron {
@@ -67,9 +67,9 @@ body {
 <title>Joao8</title>
 </head>
 
-<body id ="body">
+<body>
     <nav id ="navyy" class="navbar navbar-expand-lg navbar-light fixed-top">
-      <a class="navbar-brand" href="#"></a>
+      <a class="navbar-brand" href="#">PORTFOLIO JOAO NETO</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -91,7 +91,7 @@ body {
       </div>
     </nav>
     <div class="jumbotron">
-        <h1  id ="goal" class="display-5 intro text-center "> Joao Neto <br> Portfolio</h1>
+        <h1  id ="goal" class="display-5 intro text-center "> Joao Neto Portfolio</h1>
         <div>
           <button id="lighterr" type="button" class="btn btn-light btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Lacute;</button>
         <button id="darkerr" type="button" class="btn btn-dark btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Dcaron;</button>
