--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
 #navyy{
   color:#264653;
   font-size: 1.2em;
-  background-color:rgba(243, 246, 251,0.3)!important;
+ /* background-color:rgba(243, 246, 251,0.3)!important;*/
 }
 
 #navyy:hover{
