--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
   font-family:'Bangers', cursive;; font-size: 14px;
   line-height: 1.6; color: #343c3c; background-color:rgba(243, 246, 251,0.3)}
 
-.jumbotron {
+.jumbotron#city {
   background-image: url("pedro-lastra-Nyvq2juw4_o-unsplash.jpg");
   height: 100vh;
   width:100vw;
@@ -33,12 +33,16 @@ body {
 
 }
 
-#goal {
- color:#F3F6FB;
- font-size: 1.5em;
- background: rgba(243, 246, 251,0.3);
- width:28vw;
- text-align: center;
+.jumbotron#nature {
+  background-image:none;
+  height: 100vh;
+  width:100vw;
+  margin:auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  margin-bottom: 0;
 
 }
 
@@ -84,13 +88,18 @@ body {
         </ul>
       </div>
     </nav>
-    <div class="jumbotron">
+    <div class="jumbotron" id="city">
         <div>
           <button id="lighterr" type="button" class="btn btn-light btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Lacute;</button>
         <button id="darkerr" type="button" class="btn btn-dark btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Dcaron;</button>
         </div>  
     </div>
-    
+    <div class="jumbotron" id="nature">
+      <div>
+        <button id="lighterr" type="button" class="btn btn-light btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Lacute;</button>
+      <button id="darkerr" type="button" class="btn btn-dark btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Dcaron;</button>
+      </div>  
+  </div>
 
 
 
