toggle button changes

--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@ body {
     getSubmitButton.onclick = toggle;
 
     function toggle() {
-      document.getElementById("goal").style.backgroundColor = "#f2efe6";
-      document.getElementById("john").style.backgroundColor = "orange";
+      document.getElementById("city").style.jumbotron = ".jumbotron#city";
       return true;
     }
 
@@ -127,8 +126,7 @@ body {
     getSubmitButt.onclick = toggle1;
 
     function toggle1() {
-      document.getElementById("goal").style.backgroundColor = "rgba(255,169,17, 0.5)";
-      document.getElementById("john").style.backgroundColor = "rgba(128,218,86, 0.7)";
+      document.getElementById("nature").style.jumbotron = ".jumbotron#nature";
       return true;
     }
 </script>
