--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ body {
     getSubmitButton.onclick = toggle;
 
     function toggle() {
-      document.getElementById("navyy").style.backgroundColor = "#f2efe6";
+      document.getElementById("navyy").style.Color = "#f2efe6";
       return true;
     }
 
@@ -105,7 +105,7 @@ body {
     getSubmitButt.onclick = toggle1;
 
     function toggle1() {
-      document.getElementById("navyy").style.backgroundColor = "rgba(255,169,17, 0.5)";
+      document.getElementById("navyy").style.Color = "rgba(255,169,17, 0.5)";
       return true;
     }
 </script>
