--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ body {
 #navyy{
   color:#264653;
   font-size: 1.2em;
+  min-height: 25px;
 }
 
 #navyy:hover{
@@ -97,7 +98,7 @@ body {
     getSubmitButton.onclick = toggle;
 
     function toggle() {
-      document.getElementById("navyy").style.color = "#f2efe6";
+      document.getElementById("navyy").style.backgroundColor = "rgba(255,169,17, 0.5)";
       return true;
     }
 
@@ -105,7 +106,7 @@ body {
     getSubmitButt.onclick = toggle1;
 
     function toggle1() {
-      document.getElementById("navyy").style.color = "rgba(255,169,17, 0.5)";
+      document.getElementById("navyy").style.backgroundColor = "rgba(255,169,17, 0.5)";
       return true;
     }
 </script>
