color change button

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body {
     getSubmitButton.onclick = toggle;
 
     function toggle() {
-      document.getElementById("navyy").style.backgroundColor = "rgba(255,169,17, 0.5)";
+      document.getElementById("navyy").style.backgroundColor = "#3a86ff";
       return true;
     }
 
@@ -106,7 +106,7 @@ body {
     getSubmitButt.onclick = toggle1;
 
     function toggle1() {
-      document.getElementById("navyy").style.backgroundColor = "rgba(255,169,17, 0.5)";
+      document.getElementById("navyy").style.backgroundColor = "#d62828";
       return true;
     }
 </script>
