--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
 #navyy{
   color:#264653;
   font-size: 1.2em;
-  height: 38px;
+  height: 50px;
 }
 
 #navyy:hover{
@@ -106,7 +106,7 @@ body {
     getSubmitButt.onclick = toggle1;
 
     function toggle1() {
-      document.getElementById("navyy").style.backgroundColor = "#d62828";
+      document.getElementById("navyy").style.backgroundColor = "#ffd166";
       return true;
     }
 </script>
