--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body {
         </div>  
     </div>
 
-        <footer class="footer fixed-bottom">
+        <footer class="footer fixed-bottom" id="footy">
           <div class="container text-center">
             <a href="https://wa.me/5541992673154"><i class="fa fa-whatsapp"></i></a>
             <a href="https://wa.me/5541992673154"><i class="fa fa-graduation-cap"></i></a>
@@ -99,6 +99,7 @@ body {
 
     function toggle() {
       document.getElementById("navyy").style.backgroundColor = "#3a86ff";
+      document.getElementById("footy").style.backgroundColor = "#3a86ff";
       return true;
     }
 
@@ -107,6 +108,7 @@ body {
 
     function toggle1() {
       document.getElementById("navyy").style.backgroundColor = "#ffd166";
+      document.getElementById("footy").style.backgroundColor = "#ffd166";
       return true;
     }
 </script>
