--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Gayathri:wght@100&display=swap" rel="stylesheet">
 
   
   <style>
 
 body {
-  font-family:'Bangers', cursive;; font-size: 14px;
+  font-family:font-family: 'Gayathri', sans-serif; font-size: 14px;
   line-height: 1.6; color: #343c3c; background-color:rgba(243, 246, 251,0.3)}
 
 .jumbotron {
