--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gayathri:wght@100&display=swap" rel="stylesheet">
-
+  
   
   <style>
 
 body {
-  font-family:font-family: 'Gayathri', sans-serif; font-size: 14px;
-  line-height: 1.6; color: #343c3c; background-color:rgba(243, 246, 251,0.3)}
+  font-family:'Gayathri', sans-serif; font-size: 14px;
+  line-height: 1.6; color: #343c3c; background-color:rgba(243, 246, 251,0.3)
+}
 
 .jumbotron {
   background-image: url("pedro-lastra-Nyvq2juw4_o-unsplash.jpg");
