--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
 .footer a:hover { color: white;}
   </style>
 
-<title>Joao8</title>
+<title>PORTFOLIO_JOAO_NETO</title>
 </head>
 
 <body>
