--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ body {
 }
 
 #navyy{
-  color:#264653;
-  font-size: 1.2em;
+  color:#04171f;
+  font-size: 1.3em;
   height: 50px;
 }
 
@@ -56,6 +56,10 @@ body {
 
 <body>
     <nav id ="navyy" class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div>
+        <button id="lighterr" type="button" class="btn btn-light btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Lacute;</button>
+      <button id="darkerr" type="button" class="btn btn-dark btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Dcaron;</button>
+      </div>  
       <a class="navbar-brand" href="#">PORTFOLIO JOAO NETO</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -76,10 +80,6 @@ body {
           </li>
         </ul>
       </div>
-      <div>
-        <button id="lighterr" type="button" class="btn btn-light btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Lacute;</button>
-      <button id="darkerr" type="button" class="btn btn-dark btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Dcaron;</button>
-      </div>  
     </nav>
     <div class="jumbotron">
     </div>
