--- a/index.html
+++ b/index.html
@@ -1,121 +1,249 @@
 <!doctype html>
-<html lang="pt">
+<html lang="pt-br">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content = "#219ebc">
-
-    <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-  <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Gayathri:wght@100&display=swap" rel="stylesheet">
-  
-  
-  <style>
-
-body {
-  font-family:'Gayathri', sans-serif; font-size: 14px;
-  line-height: 1.6; color: #343c3c; background-color:rgba(243, 246, 251,0.3)
-}
-
-.jumbotron {
-  background-image: url("pedro-lastra-Nyvq2juw4_o-unsplash.jpg");
-  height: 100vh;
-  width:100vw;
-  margin:auto;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  margin-bottom: 0;
-
-}
-
-#navyy{
-  color:#04171f;
-  font-size: 1.3em;
-  height: 50px;
-}
-
-#navyy:hover{
-  color:#F3F6FB;
-}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CROSSFIT_LAB</title>
 
 
-.footer { background:rgba(243, 246, 251,0.3); padding: 8px 0; margin: auto; width:100vw; border-radius: 5px; justify-content: space-between;}
-.footer a {color:#264653;font-size: 20px;padding: 10px;border-right: 1px solid #70726F;transition: all .5s ease;}
-.footer a:first-child { border-left: 1px solid #264653;}
-.footer a:hover { color: white;}
-  </style>
 
-<title>PORTFOLIO_JOAO_NETO</title>
-</head>
+    <!-- Bootstrap core CSS -->
+<link href="bootstrap.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 
-<body>
-    <nav id ="navyy" class="navbar navbar-expand-lg navbar-light fixed-top">
-      <div>
-        <button id="lighterr" type="button" class="btn btn-light btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Lacute;</button>
-      <button id="darkerr" type="button" class="btn btn-dark btn-sm m-2" data-toggle="button" aria-pressed="false" autocomplete="off">&Dcaron;</button>
-      </div>  
-      <a class="navbar-brand" href="#">PORTFOLIO JOAO NETO</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a id = "navyy" class="nav-link" target=”_blank” href="cross.html">CrossFit_Lab <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a id = "navyy" class="nav-link" target=”_blank”  href="https://surfitness.com.br">Surfitness</a>
-          </li>
-          <li class="nav-item">
-            <a id = "navyy" class="nav-link" target=”_blank” href="quest.html">Biologia</a>
-          </li>
-          <li class="nav-item">
-            <a id = "navyy" class="nav-link" target=”_blank” href="brain_info.html">Brain_Info</a>
-          </li>
-        </ul>
+    <style>
+
+html{max-width: 100%; overflow-x: hidden;}/*important*/
+body{max-width: 100%; overflow-x: hidden;}
+.headerr{height:600px;}
+.jumbotron {background: url('img/girl.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
+ height: 700px; width:cover;  }
+
+ .btn-circle{color: #bb9d52; opacity: 0.1; outline-color: none; border-radius: 55%;}
+ .btn-circle:hover{opacity:1; transform: scale(1.2);}
+ .btn-outline-primary {color: #bb9d52!important;}
+ .btn-outline-primary:hover {background-color: #bb9d52!important;color:#f5f5f5!important;}
+.card-img{padding: 10px; width:30rem; height:auto;border: none;}
+.bodies{color:#f5f5f5; text-align: center; margin-top:15px;}
+.divided{width:100vw;height:auto; opacity:0.5;}
+.footer {height:15vh; padding-top: 5vh;  background:rgba(245, 245, 245, 0.4);  margin: auto; width:100vw; border-radius: 5px; justify-content: space-between;}
+.footer a {color: #bb9d52; font-size: 30px;padding: 10px;transition: all .5s ease;}
+.footer a:hover { color:#F5F5F5;}
+
+
+
+ /*///mobile mobile* mobile mobile*/
+ /*IPAD PRO*/
+ @media screen and (max-width: 1024px){
+   .headerr{height:1250px;}
+   .jumbotron {background: url('img/girl1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
+    height: 1450px; width:cover;  }
+    footer{width: 95vw;text-align: justify;}
+ }
+
+/*IPAD*/ @media screen and (max-width: 800px){
+   .headerr{height:950px;}
+   .jumbotron {background: url('img/girl1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
+    height: 1250px; width:cover;  }
+
+ }
+
+/*IPHONE 6/7/8/PLUS*/ @media screen and (max-width: 600px) {
+   .headerr{height:650px;}
+   .jumbotron {background: url('img/girl1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
+    height: 750px; width:cover;  }
+
+
+ }
+
+
+ /*MOTOG4 GALAXY S5 IPHONE5*/ @media screen and (max-width: 375px){
+   .headerr{height:450px;}
+   .jumbotron {background: url('img/girl1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
+    height:650px; width:cover;  }
+
+
+
+ }
+
+
+ /***********MOBILE MOBILE*******************************************************************/
+
+    </style>
+
+  </head>
+  <body class="bg-dark">
+    <header class=" p-3 bg-dark text-white">
+      <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+          <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+            <a href="#" class="navbar-left"><img style="padding-right:15px; width:100px; height:100px;" src="img/logo.ico"></a>
+
+          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <li><a class="nav-link px-2 text-secondary" href="index.html">Home</a></li>
+  					<li><a href="#sobre" class="nav-link px-2 text-white">LAB </a></li>
+  					<li><a href="#prof" class="nav-link px-2 text-white">WHO</a></li>
+            <li><a href="#invest" class="nav-link px-2 text-white">TRAIN</a></li>
+  					<li><a href="#contato" class="nav-link px-2 text-white">CALL</a></li>
+          </ul>
+          <div class="text-end">
+  <!--BUTTON--><a href="https://wa.me/554192673154" target= 'blank' class="btn btn-warning">Sign-up</a>
+          </div>
+        </div>
       </div>
-    </nav>
-    <div class="jumbotron">
+    </header>
+    <div class="headerr bg-dark text-secondary px-4 py-5 text-center">
+      <div class="py-5">
+        <h1 class="display-5 fw-bold text-white">The CrossFit_Lab</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="fs-5 mb-4">Venha fazer seu WOD com a gente</p>
+          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <button type="button" class=" btn btn-outline-primary border-light btn-lg px-4 me-sm-3 fw-bold">Workout Of the Day</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="jumbotron p-5 mb-4 bg-light rounded-3" id="sobre">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">The CrossFit_Lab</h1>
+        <p class="col-md-8 fs-4">Nossos treinos englobam exercícios funcionais que combinam força, resistência, capacidade cardiovascular e respiratória, agilidade e flexibilidade. São treinos de alta intensidade com tempo médio entre 40 e 60 minutos, levando o corpo ao seu extremo e desafiando seus limites.</p>
+      </div>
     </div>
 
-        <footer class="footer fixed-bottom" id="footy">
-          <div class="container text-center">
-            <a href="https://wa.me/554100000000"><i class="fa fa-whatsapp"></i></a>
-            <a href="https://wa.me/554100000000"><i class="fa fa-graduation-cap"></i></a>
-            <a href="https://wa.me/554100000000"><i class="fa fa-hand-spock-o"></i></a>
-            <a href="https://wa.me/554100000000"><i class="fa fa-spinner fa-pulse fa-1x"></i></a>
-          
+    <div class"row col-12 bg-dark">
+      <img src="img/div.jpg" class="img-responsive divided" alt="...">
+    </div>
+
+    <div id= "prof" class="row row-cols-1 row-cols-sm-3 bg-dark">
+    <div class="card .col-6 .col-sm-4  bg-dark">
+      <div class="row no-gutters ">
+        <div class="col-md-4">
+          <img src="img/prof1.jpg" class="card-img" alt="...">
+        </div>
+        <div class="col-md-8 mt-2 ">
+          <div class="card-body card-img-overlay border-light bodies">
+            <h5 class="card-title">Juliano Neves  <span><a href=""><i class="fa fa-instagram"></i></a></span></h5>
+            <h6 class="card-text">Sócio proprietário. Atleta CrossFit_Lab.</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card .col-6 .col-sm-4 bg-dark ">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <img src="img/prof3.jpg" class="card-img" alt="...">
+        </div>
+        <div class="col-md-8 mt-2">
+          <div class="card-body card-img-overlay border-light bodies">
+            <h5 class="card-title">André Azevedo <span><a href=""><i class="fa fa-instagram"></i></a></span></h5>
+            <h6 class="card-text">Atleta e técnico CrossFit_Lab. <br>Pioneiro do Crossfit em CWB.</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card .col-6 .col-sm-4 bg-dark">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <img src="img/prof2.jpg" class="card-img" alt="...">
+        </div>
+        <div class="col-md-8 mt-2">
+          <div class="card-body card-img-overlay border-light bodies">
+            <h5 class="card-title">Jéssica Almeida  <span><a href=""><i class="fa fa-instagram"></i></a></span></h5>
+            <h6 class="card-text">Professora e atleta CrossFit_Lab.</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class"row col-12 ">
+    <img src="img/div1.jpg" class="img-responsive divided" alt="...">
+  </div>
+      <div class="row row-cols-1 row-cols-md-3 mb-3 text-center " >
+        <div class="col">
+          <div class="card mb-4 rounded-3 shadow-sm bg-dark text-white" >
+            <div class="card-header py-3" id="invest">
+              <h4 class="my-0 fw-normal">Free</h4>
             </div>
-        </footer>
+            <div class="card-body ">
+              <h1 class="card-title pricing-card-title">R$0<small class="text-muted fw-light"></small></h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>Treino experimental</li>
+                <li>A melhor equipe</li>
+                <li>Estrutura vip</li>
+                <li>Treino 100% Fit_Lab</li>
+              </ul>
+              <button type="button" class="w-100 btn btn-lg btn-outline-primary border-light  btn-default">Quero conhecer</button>
+            </div>
+          </div>
+        </div>
+        <div class="col ">
+          <div class="card mb-4 rounded-3 shadow-sm bg-dark text-white">
+            <div class="card-header py-3">
+              <h4 class="my-0 fw-normal">Member</h4>
+            </div>
+            <div class="card-body ">
+              <h1 class="card-title pricing-card-title">R$120<small class="text-muted fw-light"></small></h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>Team Member</li>
+                <li>2 dias/semana</li>
+                <li>Estrutura vip</li>
+                <li>Treino 100% Fit_Lab</li>
+              </ul>
+              <button type="button" class="w-100 btn btn-lg btn-outline-primary border-light btn-default fw-bold">Team member</button>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-4 rounded-3 shadow-sm bg-dark text-white">
+          <div class="card-header py-3">
+            <h4 class="my-0 fw-normal">VIP Member</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">R$180<small class="text-muted fw-light"></small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>VIP Member</li>
+              <li>All day</li>
+              <li>Estrutura vip</li>
+              <li>Treino 100% Fit_Lab</li>
+            </ul>
+            <button type="button" class="w-100 btn btn-lg btn-outline-primary border-light btn-default fw-bold">VIP member</button>
+          </div>
+        </div>
+      </div>
+      </div>
+      <!--BUTTON TO TOP-->
+      <button type="button" class=" btn-circle fixed-bottom" onclick="topFunction()" title="Go to top" >&Uarr;</button>
+      <!--BUTTON TO TOP-->
+      <!-- Footer -->
+      <!-- Site footer -->
 
-        <script>
-    const getSubmitButton = document.getElementById("lighterr");
-    getSubmitButton.onclick = toggle;
+  <footer class="footer sm-12 bg-dark text-white">
+    <div class="container text-center" id="contato">
+      <a href="https://wa.me/554192673154"><i class="fa fa-whatsapp"></i></a>
+      <a href=""><i class="fa fa-instagram"></i></a>
+      <a href="https://criarweb41.com.br"><i class="fa fa-building"></i></a>
+      </div>
+  </footer>
 
-    function toggle() {
-      document.getElementById("navyy").style.backgroundColor = "#3a86ff";
-      document.getElementById("footy").style.backgroundColor = "#3a86ff";
-      return true;
+    <script src="bootstrap.bundle.min.js"></script>
+
+    <script>
+
+    //Get the button
+    var mybutton = document.getElementById("myBtn");
+
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function() {scrollFunction()};
+
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+      } else {
+        mybutton.style.display = "none";
+      }
     }
 
-    const getSubmitButt = document.getElementById("darkerr");
-    getSubmitButt.onclick = toggle1;
-
-    function toggle1() {
-      document.getElementById("navyy").style.backgroundColor = "#ffd166";
-      document.getElementById("footy").style.backgroundColor = "#ffd166";
-      return true;
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
     }
-</script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
-</html>
