--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CROSSFIT_LAB</title>
+    <title>Professor João Neto</title>
 
 
 
@@ -81,32 +81,32 @@ body{max-width: 100%; overflow-x: hidden;}
 
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a class="nav-link px-2 text-secondary" href="index.html">Home</a></li>
-  					<li><a href="#sobre" class="nav-link px-2 text-white">LAB </a></li>
-  					<li><a href="#prof" class="nav-link px-2 text-white">WHO</a></li>
-            <li><a href="#invest" class="nav-link px-2 text-white">TRAIN</a></li>
-  					<li><a href="#contato" class="nav-link px-2 text-white">CALL</a></li>
+  					<li><a href="#sobre" class="nav-link px-2 text-white">Início </a></li>
+  					<li><a href="#prof" class="nav-link px-2 text-white">Dicas</a></li>
+            <li><a href="#invest" class="nav-link px-2 text-white">Treino</a></li>
+  					<li><a href="#contato" class="nav-link px-2 text-white">Consultoria</a></li>
           </ul>
           <div class="text-end">
-  <!--BUTTON--><a href="https://wa.me/554192673154" target= 'blank' class="btn btn-warning">Sign-up</a>
+  <!--BUTTON--><a href="https://wa.me/5541992673154" target= 'blank' class="btn btn-warning">Contato</a>
           </div>
         </div>
       </div>
     </header>
     <div class="headerr bg-dark text-secondary px-4 py-5 text-center">
       <div class="py-5">
-        <h1 class="display-5 fw-bold text-white">The CrossFit_Lab</h1>
+        <h1 class="display-5 fw-bold text-white">Professor João Neto</h1>
         <div class="col-lg-6 mx-auto">
-          <p class="fs-5 mb-4">Venha fazer seu WOD com a gente</p>
+          <p class="fs-5 mb-4">Treinamento para a vida</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class=" btn btn-outline-primary border-light btn-lg px-4 me-sm-3 fw-bold">Workout Of the Day</button>
+            <button type="button" class=" btn btn-outline-primary border-light btn-lg px-4 me-sm-3 fw-bold">Dica do dia</button>
           </div>
         </div>
       </div>
     </div>
     <div class="jumbotron p-5 mb-4 bg-light rounded-3" id="sobre">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">The CrossFit_Lab</h1>
-        <p class="col-md-8 fs-4">Nossos treinos englobam exercícios funcionais que combinam força, resistência, capacidade cardiovascular e respiratória, agilidade e flexibilidade. São treinos de alta intensidade com tempo médio entre 40 e 60 minutos, levando o corpo ao seu extremo e desafiando seus limites.</p>
+        <h1 class="display-5 fw-bold">Professor João Neto</h1>
+        <p class="col-md-8 fs-4">Aqui você vai encontrar dicas de treinamento e saúde, visando o seu desenvolvimento para uma saúde exemplar e um ótimo condicionamento. Para uma rotina de exercícios completa, de acordo com seus objetivos, entre em contato para uma consultoria comigo! <br> Estamos juntos! </p>
       </div>
     </div>
 
@@ -162,15 +162,14 @@ body{max-width: 100%; overflow-x: hidden;}
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm bg-dark text-white" >
             <div class="card-header py-3" id="invest">
-              <h4 class="my-0 fw-normal">Free</h4>
+              <h4 class="my-0 fw-normal">Grátis</h4>
             </div>
             <div class="card-body ">
               <h1 class="card-title pricing-card-title">R$0<small class="text-muted fw-light"></small></h1>
               <ul class="list-unstyled mt-3 mb-4">
-                <li>Treino experimental</li>
-                <li>A melhor equipe</li>
-                <li>Estrutura vip</li>
-                <li>Treino 100% Fit_Lab</li>
+                <li>Dica do dia</li>
+                <li>Artigos baseados em evidência</li>
+                <li>Primeira consultoria com desconto</li>
               </ul>
               <button type="button" class="w-100 btn btn-lg btn-outline-primary border-light  btn-default">Quero conhecer</button>
             </div>
@@ -179,33 +178,32 @@ body{max-width: 100%; overflow-x: hidden;}
         <div class="col ">
           <div class="card mb-4 rounded-3 shadow-sm bg-dark text-white">
             <div class="card-header py-3">
-              <h4 class="my-0 fw-normal">Member</h4>
+              <h4 class="my-0 fw-normal">Consultoria</h4>
             </div>
             <div class="card-body ">
-              <h1 class="card-title pricing-card-title">R$120<small class="text-muted fw-light"></small></h1>
+              <h1 class="card-title pricing-card-title">R$90<small class="text-muted fw-light"></small></h1>
               <ul class="list-unstyled mt-3 mb-4">
-                <li>Team Member</li>
-                <li>2 dias/semana</li>
-                <li>Estrutura vip</li>
-                <li>Treino 100% Fit_Lab</li>
+                <li>Consultoria uma vez ao mês ou quando desejar</li>
+                <li>Preços acessíveis e combos</li>
+                <li>Para alunos iniciantes à avançados</li>
               </ul>
-              <button type="button" class="w-100 btn btn-lg btn-outline-primary border-light btn-default fw-bold">Team member</button>
+              <button type="button" class="w-100 btn btn-lg btn-outline-primary border-light btn-default fw-bold">Consultoria Fit</button>
             </div>
           </div>
         </div>
         <div class="card mb-4 rounded-3 shadow-sm bg-dark text-white">
           <div class="card-header py-3">
-            <h4 class="my-0 fw-normal">VIP Member</h4>
+            <h4 class="my-0 fw-normal">Personal Trainer</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">R$180<small class="text-muted fw-light"></small></h1>
+            <h1 class="card-title pricing-card-title">R$350<small class="text-muted fw-light"></small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>VIP Member</li>
-              <li>All day</li>
-              <li>Estrutura vip</li>
-              <li>Treino 100% Fit_Lab</li>
+              <li>Personal Trainer</li>
+              <li>De acordo com sua rotina</li>
+              <li>Preços especiais e combos</li>
+              <li>Treinamento resistido/corrida de rua</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-outline-primary border-light btn-default fw-bold">VIP member</button>
+            <button type="button" class="w-100 btn btn-lg btn-outline-primary border-light btn-default fw-bold">Personal Trainer</button>
           </div>
         </div>
       </div>
@@ -218,9 +216,8 @@ body{max-width: 100%; overflow-x: hidden;}
 
   <footer class="footer sm-12 bg-dark text-white">
     <div class="container text-center" id="contato">
-      <a href="https://wa.me/554192673154"><i class="fa fa-whatsapp"></i></a>
+      <a href="https://wa.me/5541992673154"><i class="fa fa-whatsapp"></i></a>
       <a href=""><i class="fa fa-instagram"></i></a>
-      <a href="https://criarweb41.com.br"><i class="fa fa-building"></i></a>
       </div>
   </footer>
 
