text changes II

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ body{max-width: 100%; overflow-x: hidden;}
               <ul class="list-unstyled mt-3 mb-4">
                 <li>Dica do dia</li>
                 <li>Artigos baseados em evidência</li>
-                <li>Primeira consultoria com desconto</li>
+                <li>Envie sua dúvida para nosso mural</li>
               </ul>
               <button type="button" class="w-100 btn btn-lg btn-outline-primary border-light  btn-default">Quero conhecer</button>
             </div>
@@ -183,7 +183,7 @@ body{max-width: 100%; overflow-x: hidden;}
             <div class="card-body ">
               <h1 class="card-title pricing-card-title">R$90<small class="text-muted fw-light"></small></h1>
               <ul class="list-unstyled mt-3 mb-4">
-                <li>Consultoria uma vez ao mês ou quando desejar</li>
+                <li>Consultoria uma vez ao mês</li>
                 <li>Preços acessíveis e combos</li>
                 <li>Para alunos iniciantes à avançados</li>
               </ul>
@@ -198,7 +198,6 @@ body{max-width: 100%; overflow-x: hidden;}
           <div class="card-body">
             <h1 class="card-title pricing-card-title">R$350<small class="text-muted fw-light"></small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>Personal Trainer</li>
               <li>De acordo com sua rotina</li>
               <li>Preços especiais e combos</li>
               <li>Treinamento resistido/corrida de rua</li>
