--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body{max-width: 100%; overflow-x: hidden;}
       <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
           <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-            <a href="#" class="navbar-left"><img style="padding-right:15px; width:100px; height:100px;" src="img/logo.ico"></a>
+            <a href="#" class="navbar-left"><img style="padding-right:15px; width:100px; height:100px;" src="img/logo_1.png"></a>
 
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a class="nav-link px-2 text-secondary" href="index.html">Home</a></li>
