--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 html{max-width: 100%; overflow-x: hidden;}/*important*/
 body{max-width: 100%; overflow-x: hidden;}
 .headerr{height:600px;}
-.jumbotron {background: url('img/girl.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
+.jumbotron {background: url('img/john.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
  height: 700px; width:cover;  }
 
  .btn-circle{color: #bb9d52; opacity: 0.1; outline-color: none; border-radius: 55%;}
@@ -36,21 +36,21 @@ body{max-width: 100%; overflow-x: hidden;}
  /*IPAD PRO*/
  @media screen and (max-width: 1024px){
    .headerr{height:1250px;}
-   .jumbotron {background: url('img/girl1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
+   .jumbotron {background: url('img/john1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
     height: 1450px; width:cover;  }
     footer{width: 95vw;text-align: justify;}
  }
 
 /*IPAD*/ @media screen and (max-width: 800px){
    .headerr{height:950px;}
-   .jumbotron {background: url('img/girl1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
+   .jumbotron {background: url('img/john1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
     height: 1250px; width:cover;  }
 
  }
 
 /*IPHONE 6/7/8/PLUS*/ @media screen and (max-width: 600px) {
    .headerr{height:650px;}
-   .jumbotron {background: url('img/girl1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
+   .jumbotron {background: url('img/john1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
     height: 750px; width:cover;  }
 
 
@@ -59,7 +59,7 @@ body{max-width: 100%; overflow-x: hidden;}
 
  /*MOTOG4 GALAXY S5 IPHONE5*/ @media screen and (max-width: 375px){
    .headerr{height:450px;}
-   .jumbotron {background: url('img/girl1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
+   .jumbotron {background: url('img/john1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
     height:650px; width:cover;  }
 
 
@@ -118,12 +118,12 @@ body{max-width: 100%; overflow-x: hidden;}
     <div class="card .col-6 .col-sm-4  bg-dark">
       <div class="row no-gutters ">
         <div class="col-md-4">
-          <img src="img/prof1.jpg" class="card-img" alt="...">
+          <img src="img/javier-santos-guzman-9MR78HGoflw-unsplash.jpg" class="card-img" alt="...">
         </div>
         <div class="col-md-8 mt-2 ">
           <div class="card-body card-img-overlay border-light bodies">
-            <h5 class="card-title">Juliano Neves  <span><a href=""><i class="fa fa-instagram"></i></a></span></h5>
-            <h6 class="card-text">Sócio proprietário. Atleta CrossFit_Lab.</h6>
+            <h5 class="card-title">Musculação<span><a href=""><i class="fa fa-instagram"></i></a></span></h5>
+            <h6 class="card-text">Dica do dia </h6>
           </div>
         </div>
       </div>
@@ -131,12 +131,12 @@ body{max-width: 100%; overflow-x: hidden;}
     <div class="card .col-6 .col-sm-4 bg-dark ">
       <div class="row no-gutters">
         <div class="col-md-4">
-          <img src="img/prof3.jpg" class="card-img" alt="...">
+          <img src="img/jakob-owens-A4579vLezz8-unsplash.jpg" class="card-img" alt="...">
         </div>
         <div class="col-md-8 mt-2">
           <div class="card-body card-img-overlay border-light bodies">
-            <h5 class="card-title">André Azevedo <span><a href=""><i class="fa fa-instagram"></i></a></span></h5>
-            <h6 class="card-text">Atleta e técnico CrossFit_Lab. <br>Pioneiro do Crossfit em CWB.</h6>
+            <h5 class="card-title">Corrida <span><a href=""><i class="fa fa-instagram"></i></a></span></h5>
+            <h6 class="card-text">Dica do dia</h6>
           </div>
         </div>
       </div>
@@ -144,12 +144,12 @@ body{max-width: 100%; overflow-x: hidden;}
     <div class="card .col-6 .col-sm-4 bg-dark">
       <div class="row no-gutters">
         <div class="col-md-4">
-          <img src="img/prof2.jpg" class="card-img" alt="...">
+          <img src="img/alex-azabache-CMU1oc0waus-unsplash.jpg" class="card-img" alt="...">
         </div>
         <div class="col-md-8 mt-2">
           <div class="card-body card-img-overlay border-light bodies">
-            <h5 class="card-title">Jéssica Almeida  <span><a href=""><i class="fa fa-instagram"></i></a></span></h5>
-            <h6 class="card-text">Professora e atleta CrossFit_Lab.</h6>
+            <h5 class="card-title">Bem estar  <span><a href=""><i class="fa fa-instagram"></i></a></span></h5>
+            <h6 class="card-text">Dica do dia</h6>
           </div>
         </div>
       </div>
